# termassist

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: test.yml
termassist/: __init__.py  cli.py  config.py  direct.py  fallback.py  hook_installer.py  matcher.py  ollama_client.py  typo.py  ui.py
termassist/shell/: command_not_found_handle.sh  command_not_found_handler.zsh  install_hook.sh
terminalhelfer/: __init__.py  cli.py  config.py  direct.py  fallback.py  hook_installer.py  matcher.py  ollama_client.py  typo.py
terminalhelfer/data/: commands.json
terminalhelfer/shell/: command_not_found_handle.sh  install_hook.sh
tests/: test_cli.py  test_command_not_found_handle.py  test_config.py  test_direct.py  test_fallback.py  test_hook_installer.py  test_matcher.py  test_typo.py
