[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terminalhelfer"
version = "0.1.0"
description = "Ein deutschsprachiger Terminal-Assistent fuer Linux-Einsteiger"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "terminalhelfer contributors" }]
keywords = ["cli", "linux", "terminal", "deutsch", "ollama"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Natural Language :: German",
]
dependencies = [
    "questionary>=2.0",
    "rich>=13.0",
    "rapidfuzz>=3.0",
    "requests>=2.31",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
terminalhelfer = "terminalhelfer.cli:main"

[tool.setuptools.packages.find]
include = ["terminalhelfer*"]

[tool.setuptools.package-data]
terminalhelfer = ["data/*.json"]
